# python-learn

./: .gitignore  README.md  algorithm.py  auto-detection-compose.yml  auto_detection_sequence_diagram.puml  decorator_middleware.py  detection_example.py  fastapi_learn.py  minio_learn.py  monitor-compose.yml  mqtt_learn.py  mqtt_reciever_1.py  mqtt_reciever_2.py  python_web_learn.py  rabbitmq_consumer.py  rabbitmq_producer.py  requirements.txt  sqlalchemy_learn.py  thread_learn.py
autopack/: README.md  autopack_mqtt.puml
autopack/autopack_mqtt/: enums.py  logger.py  protocol.py
autopack/tests/: __init__.py
c51/: README.md
c51/demo/: .gitignore
c51/demo/.eide/: eide.json
c51/demo/src/: main.c
connection/: __init__.py  mysql.py
cplusplus/: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  apos_sdk.puml  build.sh  helloworld.cpp  helloworld.h  main  main.cpp  main_2.cpp  main_3.cpp  student.cpp  student.h  teacher.cpp  teacher.h  tuya_t3.puml  tuya_t3_class.puml  version.h.in
cplusplus/src/: demo.cpp  main.cpp  select_server.cpp  socket_client.cpp  socket_server.cpp  super_print.h
cplusplus/src/super_printf/: CMakeLists.txt  super_printf.cpp
cplusplus/src/super_printf/inc/: test.cpp
mqtt_sdk/: __init__.py  client.py  enums.py  exception.py  interface.py  logger.py  protocol.py  utils.py
mqtt_v1/: README.md  __init__.py  client.py  exception.py  interface.py  logger.py  protocol.py  test_client.py  utils.py
package_learn/: setup.py
python/: README.md  __init__.py  calc_work_time.py  check_tuya_t4_config.json  check_tuya_t4_config.py  collect_log_from_ftp.py  mz_ota.puml  python_web_learn.py  thread_learn.py  upload_error_code_notify_utils.py
python/algorithm/: __init__.py  algorithm.py
python/autopack/: Monitor.md  __init__.py  ap_mode_get_station_list.puml  auto_detection_sequence_diagram.puml  autopack_mqtt.puml  detection_design.puml  detection_design.py  iot_sdk.puml  iot_sdk_event.puml  iot_sdk_multi_map.puml  iot_sdk_property_report.puml  monitor-compose.yml  setup.py  time_sync.puml
python/autopack/autopack_mqtt/: __init__.py  client.py  enums.py  exception.py  interface.py  logger.py  protocol.py  utils.py
python/autopack/tests/: __init__.py  test_mqtt.py
python/django/: __init__.py
python/django/mysite/: manage.py
python/django/mysite/mysite/: asgi.py  settings.py  urls.py  wsgi.py
python/django/mysite/polls/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
python/django/mysite/polls/migrations/: 0001_initial.py  0002_alter_choice_votes.py
python/django/mysite/polls/templates/polls/: index.html
python/fastapi/: __init__.py  decorator_middleware.py  fastapi_learn.py  main.py  test_main.py
python/minio/: __init__.py  minio_learn.py
python/mqtt/: __init__.py  custom_mqtt.py
python/mysql/: Innodb.md  __init__.py  connection.py
python/package_learn/: __init__.py  setup.py
python/package_learn/src/: __init__.py
python/package_learn/src/example_package/: __init__.py  example.py  test.py
python/pydantic/: __init__.py  main.py
python/python_test/: __init__.py  script.py  test_exec_script.py
python/rabbitmq/: __init__.py  rabbitmq_consumer.py  rabbitmq_producer.py
python/redis/: learn_redis.py
python/sqlalchemy/: __init__.py  main.py  sqlalchemy_learn.py
python/tkinter/: __init__.py  main.py
python/video_operation/: Protocol.md  __init__.py  analysis.py  main.py  test.py
python/websocket/: client.py  server.py
python/zmq/: __init__.py  client.py  server.py
technical/: 数据回传监控服务.md  数据监控.drawio
technical/cicd/: Gitlab.md
